chore(ci): spot health fix, earthly workarounds (#6379)
- Fix backoff with instance requirements being set incorrectly
- Add more instance types to take advantage of this
- Pass one earthly workarounds, namely one for the rare case that all
earthly-ci calls try to bootstrap at once
- [s]Switch to 'systemctl restart docker' which seemed to recover my
spot from a bad case with 'pull ping', still not sure root cause but
running that fixed it while multiple fresh spots didn't[/s] Scratch
that, it was a bad /var/lib/docker/tmp path which is internally used

--- a/.github/ensure-tester/action.yml
+++ b/.github/ensure-tester/action.yml
@@ -38,7 +38,7 @@ runs:
         elif [[ $TYPE == 128core-* ]]; then
           SIZE=32xlarge
         fi
-        echo "instance_type=m6a.$SIZE r6in.$SIZE r6a.$SIZE i4i.$SIZE r7iz.$SIZE" >> $GITHUB_OUTPUT
+        echo "instance_type=i4i.$SIZE m6a.$SIZE m6i.$SIZE m6id.$SIZE m6idn.$SIZE m6in.$SIZE m7a.$SIZE r6a.$SIZE r6i.$SIZE r6id.$SIZE r6in.$SIZE r7iz.$SIZE" >> $GITHUB_OUTPUT
 
     - name: Start Tester
       uses: ./.github/spot-runner-action
