--- a/yarn-project/package.json
+++ b/yarn-project/package.json
@@ -72,7 +72,7 @@
     "@noir-lang/types": "portal:../noir/packages/types",
     "@noir-lang/noirc_abi": "portal:../noir/packages/noirc_abi",
     "@noir-lang/noir_codegen": "portal:../noir/packages/noir_codegen",
-    "@noir-lang/noir_js": "portal:../noir/packages/noir_js",
+    "@noir-lang/noir_js": "file:../noir/packages/noir_js",
     "jest-runner@^29.7.0": "patch:jest-runner@npm%3A29.7.0#./.yarn/patches/jest-runner-npm-29.7.0-3bc9f82b58.patch"
   }
 }
