--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,7 @@ on:
     branches: [master]
   pull_request: {}
   workflow_dispatch:
-    inputs:
-      username:
-        description: "Defaults to GitHub Actor"
-        required: false
+    inputs: {}
 
 concurrency:
   # force parallelism in master
@@ -18,7 +15,7 @@ env:
   DOCKERHUB_PASSWORD: "${{ secrets.DOCKERHUB_PASSWORD }}"
   RUN_ID: ${{ github.run_id }}
   RUN_ATTEMPT: ${{ github.run_attempt }}
-  USERNAME: ${{ inputs.username || github.actor }}
+  USERNAME: ${{ github.event.pull_request.user.login || github.actor }}
   GITHUB_TOKEN: ${{ github.token }}
   GH_SELF_HOSTED_RUNNER_TOKEN: ${{ secrets.GH_SELF_HOSTED_RUNNER_TOKEN }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -32,12 +29,12 @@ jobs:
   setup:
     uses: ./.github/workflows/setup-runner.yml
     with:
-      username: ${{ inputs.username || github.actor }}
+      username: ${{ github.event.pull_request.user.login || github.actor }}
       runner_type: builder-x86
     secrets: inherit
   build:
     needs: setup
-    runs-on: ${{ inputs.username || github.actor }}-x86
+    runs-on: ${{ github.event.pull_request.user.login || github.actor }}-x86
     outputs:
       e2e_list: ${{ steps.e2e_list.outputs.list }}
       bench_list: ${{ steps.bench_list.outputs.list }}
@@ -46,7 +43,7 @@ jobs:
         with: { ref: "${{ env.GIT_COMMIT }}" }
       - uses: ./.github/ci-setup-action
         with:
-          concurrency_key: build-${{ inputs.username || github.actor }}-x86
+          concurrency_key: build-${{ github.event.pull_request.user.login || github.actor }}-x86
       # prepare images locally, tagged by commit hash
       - name: "Build E2E Image"
         timeout-minutes: 40
@@ -124,7 +121,7 @@ jobs:
 
   # # bench-summary:
   # #   needs: e2e
-  # #   runs-on: ${{ inputs.username || github.actor }}-x86
+  # #   runs-on: ${{ github.event.pull_request.user.login || github.actor }}-x86
   # #   steps:
   # #     - uses: actions/checkout@v4
   # #       with:
@@ -132,7 +129,7 @@ jobs:
   # #         ref: "${{ env.GIT_COMMIT }}"
   # #     - uses: ./.github/ci-setup-action
   # #       with:
-  # #         concurrency_key: build-${{ inputs.username || github.actor }}-x86
+  # #         concurrency_key: build-${{ github.event.pull_request.user.login || github.actor }}-x86
   # #     - name: "Build and upload bench aggregate file"
   # #       working-directory: ./yarn-project/scripts
   # #       run: earthly-ci -P --secret AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} --secret AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} +bench-aggregate
@@ -151,13 +148,13 @@ jobs:
 
   noir-format:
     needs: setup
-    runs-on: ${{ inputs.username || github.actor }}-x86
+    runs-on: ${{ github.event.pull_request.user.login || github.actor }}-x86
     steps:
       - uses: actions/checkout@v4
         with: { ref: "${{ env.GIT_COMMIT }}" }
       - uses: ./.github/ci-setup-action
         with:
-          concurrency_key: noir-format-${{ inputs.username || github.actor }}-x86
+          concurrency_key: noir-format-${{ github.event.pull_request.user.login || github.actor }}-x86
       - name: "Format Noir"
         working-directory: ./noir/
         timeout-minutes: 25
@@ -171,7 +168,7 @@ jobs:
   # only ran on x86 for resource reasons (memory intensive)
   bb-native-tests:
     needs: setup
-    runs-on: ${{ inputs.username || github.actor }}-x86
+    runs-on: ${{ github.event.pull_request.user.login || github.actor }}-x86
     steps:
       - uses: actions/checkout@v4
         with: { ref: "${{ env.GIT_COMMIT }}" }
@@ -179,7 +176,7 @@ jobs:
       - uses: ./.github/ci-setup-action
         with:
           # must be globally unique for build x runner
-          concurrency_key: bb-native-tests-${{ inputs.username || github.actor }}-x86
+          concurrency_key: bb-native-tests-${{ github.event.pull_request.user.login || github.actor }}-x86
       - name: "Native Prover Tests"
         working-directory: ./barretenberg/cpp/
         timeout-minutes: 25
@@ -202,37 +199,37 @@ jobs:
 
   noir-test:
     needs: setup
-    runs-on: ${{ inputs.username || github.actor }}-x86
+    runs-on: ${{ github.event.pull_request.user.login || github.actor }}-x86
     steps:
       - uses: actions/checkout@v4
         with: { ref: "${{ env.GIT_COMMIT }}" }
       - uses: ./.github/ci-setup-action
         with:
-          concurrency_key: noir-${{ inputs.username || github.actor }}-x86
+          concurrency_key: noir-${{ github.event.pull_request.user.login || github.actor }}-x86
       - name: "Test Noir JS packages"
         run: earthly-ci --no-output ./noir+test
 
   noir-packages-test:
     needs: setup
-    runs-on: ${{ inputs.username || github.actor }}-x86
+    runs-on: ${{ github.event.pull_request.user.login || github.actor }}-x86
     steps:
       - uses: actions/checkout@v4
         with: { ref: "${{ env.GIT_COMMIT }}" }
       - uses: ./.github/ci-setup-action
         with:
-          concurrency_key: noir-packages-${{ inputs.username || github.actor }}-x86
+          concurrency_key: noir-packages-${{ github.event.pull_request.user.login || github.actor }}-x86
       - name: "Test Noir JS packages"
         run: earthly-ci --no-output ./noir+packages-test
 
   noir-projects:
     needs: setup
-    runs-on: ${{ inputs.username || github.actor }}-x86
+    runs-on: ${{ github.event.pull_request.user.login || github.actor }}-x86
     steps:
       - uses: actions/checkout@v4
         with: { ref: "${{ env.GIT_COMMIT }}" }
       - uses: ./.github/ci-setup-action
         with:
-          concurrency_key: noir-projects-${{ inputs.username || github.actor }}-x86
+          concurrency_key: noir-projects-${{ github.event.pull_request.user.login || github.actor }}-x86
       - name: "Noir Projects"
         timeout-minutes: 25
         run: earthly-ci --no-output ./noir-projects/+test
@@ -336,14 +333,14 @@ jobs:
 
   docs-preview:
     needs: build
-    runs-on: ${{ inputs.username || github.actor }}-x86
+    runs-on: ${{ github.event.pull_request.user.login || github.actor }}-x86
     if: github.event.number
     steps:
       - uses: actions/checkout@v4
         with: { ref: "${{ env.GIT_COMMIT }}" }
       - uses: ./.github/ci-setup-action
         with:
-          concurrency_key: docs-preview-${{ inputs.username || github.actor }}-x86
+          concurrency_key: docs-preview-${{ github.event.pull_request.user.login || github.actor }}-x86
       - name: "Docs Preview"
         timeout-minutes: 30
         run: earthly-ci --no-output ./docs/+deploy-preview --PR=${{ github.event.number }} --AZTEC_BOT_COMMENTER_GITHUB_TOKEN=${{ secrets.AZTEC_BOT_GITHUB_TOKEN }} --NETLIFY_AUTH_TOKEN=${{ secrets.NETLIFY_AUTH_TOKEN }} --NETLIFY_SITE_ID=${{ secrets.NETLIFY_SITE_ID }}
@@ -374,7 +371,7 @@ jobs:
 
   protocol-circuits-gates-report:
     needs: setup
-    runs-on: ${{ inputs.username || github.actor }}-x86
+    runs-on: ${{ github.event.pull_request.user.login || github.actor }}-x86
     permissions:
       pull-requests: write
     steps:
@@ -383,7 +380,7 @@ jobs:
       # Only allow one memory-hunger prover test to use this runner
       - uses: ./.github/ci-setup-action
         with:
-          concurrency_key: protocol-circuits-gates-report-${{ inputs.username || github.actor }}-x86
+          concurrency_key: protocol-circuits-gates-report-${{ github.event.pull_request.user.login || github.actor }}-x86
       - name: "Noir Protocol Circuits Report"
         working-directory: ./noir-projects/
         timeout-minutes: 25
