--- a/yarn-project/p2p/package.json
+++ b/yarn-project/p2p/package.json
@@ -44,7 +44,8 @@
           "summaryThreshold": 9999
         }
       ]
-    ]
+    ],
+    "testTimeout": 15000
   },
   "dependencies": {
     "@aztec/circuit-types": "workspace:^",
