--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,32 +119,33 @@ jobs:
               --no-output \
               +${{ matrix.test }}
 
-  # # bench-summary:
-  # #   needs: e2e
-  # #   runs-on: ${{ github.event.pull_request.user.login || github.actor }}-x86
-  # #   steps:
-  # #     - uses: actions/checkout@v4
-  # #       with:
-  # #         fetch-depth: 100 # Downloading base benchmark from master requires access to history
-  # #         ref: "${{ env.GIT_COMMIT }}"
-  # #     - uses: ./.github/ci-setup-action
-  # #       with:
-  # #         concurrency_key: build-${{ github.event.pull_request.user.login || github.actor }}-x86
-  # #     - name: "Build and upload bench aggregate file"
-  # #       working-directory: ./yarn-project/scripts
-  # #       run: earthly-ci -P --secret AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} --secret AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} +bench-aggregate
-  # #     - name: "Download base benchmark"
-  # #       if: ${{ github.event_name == 'pull_request' }}
-  # #       run: scripts/logs/download_base_benchmark_from_s3.sh
-  # #       env:
-  # #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  # #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  # #         BENCH_FOLDER: ./yarn-project/scripts/bench
-  # #         PULL_REQUEST: "${{ github.event.pull_request.number }}"
-  # #     - name: "Generate summary comment if pull request"
-  # #       if: ${{ github.event_name == 'pull_request' }}
-  # #       working-directory: ./yarn-project/scripts
-  # #       run: earthly-ci -P --secret AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} --secret AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} --secret AZTEC_BOT_COMMENTER_GITHUB_TOKEN=${{ secrets.AZTEC_BOT_GITHUB_TOKEN }} +bench-comment
+  bench-summary:
+    needs: bench-e2e
+    runs-on: ${{ inputs.username || github.actor }}-x86
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 100 # Downloading base benchmark from master requires access to history
+          ref: "${{ github.event.pull_request.head.sha }}"
+      - uses: ./.github/ci-setup-action
+        with:
+          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
+          concurrency_key: build-${{ inputs.username || github.actor }}-x86
+      - name: "Build and upload bench aggregate file"
+        working-directory: ./yarn-project/scripts
+        run: earthly-ci -P --secret AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} --secret AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} +bench-aggregate
+      - name: "Download base benchmark"
+        if: ${{ github.event_name == 'pull_request' }}
+        run: scripts/logs/download_base_benchmark_from_s3.sh
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          BENCH_FOLDER: ./yarn-project/scripts/bench
+          PULL_REQUEST: "${{ github.event.pull_request.number }}"
+      - name: "Generate summary comment if pull request"
+        if: ${{ github.event_name == 'pull_request' }}
+        working-directory: ./yarn-project/scripts
+        run: earthly-ci -P --secret AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} --secret AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} --secret AZTEC_BOT_COMMENTER_GITHUB_TOKEN=${{ secrets.AZTEC_BOT_GITHUB_TOKEN }} +bench-comment
 
   noir-format:
     needs: setup
