hotfix(ci): publish docs

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -16,7 +16,7 @@ jobs:
 
   publish:
     needs: setup
-    runs-on: master
+    runs-on: master-x86
     steps:
       - uses: actions/checkout@v4
         with:
