--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -166,5 +166,6 @@
     "**/l1-contracts/lib/**": true,
     "**/barretenberg/cpp/build*/**": true
   },
-  "cmake.sourceDirectory": "${workspaceFolder}/barretenberg/cpp"
+  "cmake.sourceDirectory": "${workspaceFolder}/barretenberg/cpp",
+  "noir.nargoPath": "./noir/noir-repo/target/release/nargo"
 }
