--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -254,6 +254,18 @@ jobs:
           command: cond_spot_run_build avm-transpiler 32
           aztec_manifest_key: avm-transpiler
 
+  aztec-nargo:
+    docker:
+      - image: aztecprotocol/alpine-build-image
+    resource_class: small
+    steps:
+      - *checkout
+      - *setup_env
+      - run:
+          name: "Build"
+          command: cond_spot_run_build aztec-nargo 32
+          aztec_manifest_key: aztec-nargo
+
   l1-contracts:
     machine:
       image: default
@@ -502,6 +514,9 @@ workflows:
 
       # Transpiler
       - avm-transpiler: *defaults
+
+      # aztec-nargo (nargo & transpiler)
+      - aztec-nargo: *defaults
 
       # Barretenberg
       - barretenberg-x86_64-linux-gcc: *defaults
