--- a/build_manifest.yml
+++ b/build_manifest.yml
@@ -51,6 +51,17 @@ avm-transpiler:
   dependencies:
     - noir
 
+aztec-nargo:
+  buildDir: .
+  dockerfile: aztec-nargo/Dockerfile
+  rebuildPatterns:
+    - ^aztec-nargo/
+    - ^avm-transpiler/
+    - ^noir/
+  dependencies:
+    - avm-transpiler
+    - noir
+
 # Compiles all aztec noir projects using nargo and the avm-transpiler.
 noir-projects:
   buildDir: noir-projects
