fix earthly file for aztec-nargo

--- a/avm-transpiler/Dockerfile
+++ b/avm-transpiler/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /usr/src/avm-transpiler
 RUN apt-get update && apt-get install -y git
 RUN ./scripts/bootstrap_native.sh
 
-FROM ubuntu:focal
+FROM ubuntu:noble
+COPY --from=0 /usr/src/avm-transpiler/scripts/compile_then_transpile.sh /usr/src/avm-transpiler/scripts/compile_then_transpile.sh
 COPY --from=0 /usr/src/avm-transpiler/target/release/avm-transpiler /usr/src/avm-transpiler/target/release/avm-transpiler
-ENTRYPOINT ["sh", "-c"]
+ENTRYPOINT ["/usr/src/avm-transpiler/target/release/avm-transpiler"]
