--- a/aztec-nargo/Dockerfile
+++ b/aztec-nargo/Dockerfile
@@ -10,7 +10,7 @@ FROM ubuntu:noble
 # Install git as nargo needs it to clone.
 RUN apt-get update && apt-get install -y git tini && rm -rf /var/lib/apt/lists/* && apt-get clean
 
-# Copy binaries to /usr/bin/
+# Copy binaries to /usr/bin
 COPY --from=built-noir /usr/src/noir/noir-repo/target/release/nargo /usr/bin/nargo
 COPY --from=built-transpiler /usr/src/avm-transpiler/target/release/avm-transpiler /usr/bin/avm-transpiler
 # Copy in script that calls both binaries
